@@ -559,8 +559,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
     @SuppressWarnings("checkstyle:ParameterNumber")
     private Entry<?, ?> filterOldSchool(Entry<?, ?> entry, String descriptorType, String registry, String organization, String name, String toolname,
         String description, String author, Boolean checker) {
-        if (entry instanceof Tool) {
-            Tool tool = (Tool) entry;
+        if (entry instanceof Tool tool) {
             if (registry != null && (tool.getRegistry() == null || !tool.getRegistry().contains(registry))) {
                 return null;
             }
@@ -666,8 +665,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
             final Optional<ToolVersion> convertedToolVersion = convertedTool.getVersions().stream()
                 .filter(toolVersion -> toolVersion.getName().equalsIgnoreCase(finalVersionId)).findFirst();
             Optional<? extends Version<?>> entryVersion;
-            if (entry instanceof Tool) {
-                Tool toolEntry = (Tool)entry;
+            if (entry instanceof Tool toolEntry) {
                 entryVersion = toolEntry.getWorkflowVersions().stream().filter(toolVersion -> toolVersion.getName().equalsIgnoreCase(finalVersionId))
                     .findFirst();
             } else {
@@ -783,7 +781,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
     public static List<Checksum> convertToTRSChecksums(final SourceFile sourceFile) {
         List<Checksum> trsChecksums = new ArrayList<>();
         if (sourceFile.getChecksums() != null && !sourceFile.getChecksums().isEmpty()) {
-            sourceFile.getChecksums().stream().forEach(checksum -> {
+            sourceFile.getChecksums().forEach(checksum -> {
                 Checksum trsChecksum = new Checksum();
                 trsChecksum.setType(DESCRIPTOR_FILE_SHA256_TYPE_FOR_TRS);
                 trsChecksum.setChecksum(checksum.getChecksum());
@@ -866,8 +864,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
         try {
             versionDAO.enableNameFilter(versionId);
 
-            if (entry instanceof Workflow) {
-                Workflow workflow = (Workflow) entry;
+            if (entry instanceof Workflow workflow) {
                 Set<WorkflowVersion> workflowVersions = workflow.getWorkflowVersions();
                 Optional<WorkflowVersion> first = workflowVersions.stream()
                     .filter(workflowVersion -> workflowVersion.getName().equals(versionId)).findFirst();
@@ -884,8 +881,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
                 } else {
                     return Response.noContent().build();
                 }
-            } else if (entry instanceof Tool) {
-                Tool tool = (Tool) entry;
+            } else if (entry instanceof Tool tool) {
                 Set<Tag> versions = tool.getWorkflowVersions();
                 Optional<Tag> first = versions.stream().filter(tag -> tag.getName().equals(versionId)).findFirst();
                 if (first.isPresent()) {
@@ -949,7 +945,7 @@ public class ToolsApiServiceImpl extends ToolsApiService implements Authenticate
         // Filters the source files to only show the ones that are possibly relevant to the type (CWL or WDL or NFL)
         final DescriptorLanguage descriptorLanguage = DescriptorLanguage.convertShortStringToEnum(type);
         List<SourceFile> filteredSourceFiles = sourceFiles.stream()
-            .filter(sourceFile -> descriptorLanguage.isRelevantFileType(sourceFile.getType())).collect(Collectors.toList());
+            .filter(sourceFile -> descriptorLanguage.isRelevantFileType(sourceFile.getType())).toList();
 
         final Path path = Paths.get("/" + workingDirectory);
         return filteredSourceFiles.stream().map(file -> {
